
- Add mkSlowMemory and mkSlowMemoryM to libRL.  The modules wrap a MEMORY_IFC
  (typically a BRAM) and add a FIFO on exit to relax timing between reading
  memory and computing a function of the result.  The modules optionally add
  a buffer on the readReq and write methods.

- Add buffering around critical BRAMs in scratchpad and central cache core
  code.

- After tweaks, mem_test_hybrid_vc707 synthesizes at 130MHz.  (Need to run a
  few cost tables to get a solution.)

----------
keflemin    Date: Sat Apr  5 17:33:51 EDT 2014  CSN: CSN-leap-549
                  Sat Apr  5 21:33:51 UTC 2014


Directory tools/scripts
 leap-configure            Locally Modified          548 

Directory modules/leap/build-support/build-pipelines/stages/li_module
 liChannel.py              Locally Modified          548 
 liChain.py                Locally Modified          548 


1) Improved LEAP configure error message in the case that a python
library is missing.

2) Added additional state movement to LI data structure copy methods.

----------
keflemin    Date: Tue Apr  8 19:14:15 EDT 2014  CSN: CSN-leap-550
                  Tue Apr  8 23:14:15 UTC 2014


Directory modules/leap/build-support/build-pipelines/stages/software
 software.py               Locally Modified          549 
 software.awb              Locally Modified          549 

Directory modules/leap/build-support/build-pipelines/stages/li_module
 liModule.py               Locally Modified          549 
 liChannel.py              Locally Modified          549 
 liGraph.py                Locally Modified          549 


1) Software compilation now optionally dumps an LI graph. 

2) Changed merge graph function to operate on vectors

3) Added some debug in LI library.  

----------
mcadler     Date: Wed Apr  9 22:57:56 EDT 2014  CSN: CSN-leap-551
                  Thu Apr 10 02:57:56 UTC 2014


Directory modules/leap/libraries/librl/base
 debug-file.bsv            Locally Modified          550 

Include librl_bsv_base.